--- a/api_auto_xxx/templates/base.html
+++ b/api_auto_xxx/templates/base.html
@@ -34,8 +34,8 @@
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="{% url 'small_pokedex' %}" accesskey="1" title="">small pokedex</a></li>
-        <li><a href="#" accesskey="2" title="">thing two</a></li>
-2      <li><a href="#" accesskey="3" title="">thing three</a></li>
+        <li class="current_page_item"><a href="" accesskey="2" title="">thing two</a></li>
+        <li><a href="#" accesskey="3" title="">thing three</a></li>
         <li><a href="#" accesskey="4" title="">thing four</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
