midway through trying to get our image manipulation to work within our api... just saving in case things go poorly and I need to backup to earlier version

--- a/api_auto_xxx/api/templates/api/small_pokedex.html
+++ b/api_auto_xxx/api/templates/api/small_pokedex.html
@@ -60,6 +60,9 @@
 
           <p><br></p>
 
+          <img src="completed_color_change_animations/{{search_result.name}}_FALL_type3.gif" alt="pokemon mutated variant" style="width:300px">
+
+
           <h4><strong> Base Stats: </h4></strong>
 
           <strong>speed: {{ search_result.speed }}</strong></br>
