nade a few more changes to fix file location placement

--- a/api_auto_xxx/api/templates/api/small_pokedex.html
+++ b/api_auto_xxx/api/templates/api/small_pokedex.html
@@ -60,8 +60,7 @@
 
           <p><br></p>
 
-          <img src="completed_color_change_animations/{{search_result.name}}_FALL_type3.gif" alt="pokemon mutated variant" style="width:300px">
-
+          <img src="../../completed_color_change_animations/{{search_result.name}}_FALL_type3.gif" alt="pokemon mutated variant" style="width:200px">
 
           <h4><strong> Base Stats: </h4></strong>
 
