messy.... and it just keeps getting messier.  Choosing to leave this repo alone for a while til I figure out how to make it better

--- a/api_auto_xxx/api/templates/api/small_pokedex.html
+++ b/api_auto_xxx/api/templates/api/small_pokedex.html
@@ -69,6 +69,18 @@
           <img class="logo" src="{% static 'images/lob_328.gif' %}">
           <img class="logo" src="{% static 'images/oddish_FALL_type3.gif' %}">
 
+          <img class="logo" src="{% static 'images/{{search_result.name}}_FALL_type3.gif' %}">
+
+          <img class="logo" src="{% static 'images/oddish_FALL_type3.gif' %}">
+
+
+
+          <img src="{% static 'images/{{ search_result.name}}_FALL_type3.gif' %}">
+
+          <img class="logo" src="{% static 'images/oddish_FALL_type3.gif' %}">
+
+          <img class="logo" src="{% static 'images/oddish_FALL_type3.gif' %}">
+
 
           <h4><strong> Base Stats: </h4></strong>
 
