--- a/api_auto_xxx/api/templates/api/big_pokedex.html
+++ b/api_auto_xxx/api/templates/api/big_pokedex.html
@@ -27,8 +27,8 @@
 
     <p>here is all info in search <strong>{{ search_result.name }}</strong></p>
 
-    <img src="https://img.pokemondb.net/sprites/x-y/normal/{{ search_result.name}}.png" alt="poke3" style="width:300px">
-    <img src="http://www.pokestadium.com/sprites/xy/{{search_result.name}}.gif" alt="poke2" style="width:200px">
+    <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{ search_result.name}}.gif" alt="poke3" style="width:300px">
+    <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{search_result.name}}.gif" alt="poke2" style="width:200px">
   {% endif %}
 
 
