--- a/api_auto_xxx/api/templates/api/final_pokedex.html
+++ b/api_auto_xxx/api/templates/api/final_pokedex.html
@@ -21,7 +21,7 @@
       <p><em>{{ search_result.message }}</em></p>
     {% endif %}
 
-    <img src="http://www.pokestadium.com/sprites/xy/{{search_result.name}}.gif" alt="poke2" style="width:200px">
+    <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{search_result.name}}.gif" alt="poke2" style="width:200px">
 
     <p><strong>{{ search_result.name }}</strong> has a height of <strong>{{ search_result.height }}</strong> inches on average.</p>
     <p><strong>{{ search_result.name }}</strong> has a weight of <strong>{{ search_result.weight }}</strong> pounds for an average individual.</p>
