--- a/api_auto_xxx/api/templates/api/other_pokedex.html
+++ b/api_auto_xxx/api/templates/api/other_pokedex.html
@@ -32,9 +32,9 @@
       <div class="poke-sidebar__info">{{search_result.weight}}</div>
       <label class="poke-sidebar__label">Base Experience:</label>
       <div class="poke-sidebar__info">{{search_result.base_experience}}</div>
-      <img src="https://img.pokemondb.net/sprites/x-y/normal/{{ search_result.name}}.png" alt="poke3" style="width:100px">
+      <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{ search_result.name}}.gif" alt="poke3" style="width:100px">
 
-      <img src="http://www.pokestadium.com/sprites/xy/{{search_result.name}}.gif" alt="poke2" style="width:200px">
+      <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{search_result.name}}.gif" alt="poke2" style="width:200px">
 
       <p><strong>{{ search_result.name }}</strong> has a height of <strong>{{ search_result.height }}</strong> inches on average.</p>
       <p><strong>{{ search_result.name }}</strong> has a weight of <strong>{{ search_result.weight }}</strong> pounds for an average individual.</p>
