--- a/api_auto_xxx/api/templates/api/small_pokedex.html
+++ b/api_auto_xxx/api/templates/api/small_pokedex.html
@@ -45,14 +45,14 @@
               <div class="poke-sidebar__info">{{search_result.weight}}</div>
               <label class="poke-sidebar__label">Base Experience:</label>
               <div class="poke-sidebar__info">{{search_result.base_experience}}</div>
-              <img src="https://img.pokemondb.net/sprites/x-y/normal/{{ search_result.name}}.png" alt="poke3" style="width:100px">
+              <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{ search_result.name}}.gif" alt="poke3" style="width:100px">
 
 
             </div>
           </div>
         </div>
         <div class="five columns">
-          <img src="http://www.pokestadium.com/sprites/xy/{{search_result.name}}.gif" alt="poke2" style="width:200px">
+          <img src="https://www.pkparaiso.com/imagenes/xy/sprites/animados/{{search_result.name}}.gif" alt="poke2" style="width:200px">
 
           <h4><strong> Type Info: </h4></strong>
 
